--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
   border-radius: 1px;
 }
 
-/* .input {
+.input {
   border: 1px solid #ddd;
   border-radius: 1px;
   height: 60px;
@@ -34,7 +34,7 @@ body {
   border: 1px solid #bbb;
   -webkit-box-shadow: inset 0px 1px 4px 0px rgba(0, 0, 0, 0.2);
   box-shadow: inset 0px 1px 4px 0px rgba(0, 0, 0, 0.2);
-} */
+}
 
 /* .buttons {} */
 
