--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
-Skip Results Iframe
+/* Skip Results Iframe */
 body {
   width: 500px;
   margin: 4% auto;
   font-family: 'Source Sans Pro', sans-serif;
   letter-spacing: 5px;
   font-size: 1.8rem;
-  -moz-user-select: none;
+  /* -moz-user-select: none;
   -webkit-user-select: none;
-  -ms-user-select: none; 
+  -ms-user-select: none;  */
 }
 
 .calculator {
@@ -37,7 +37,9 @@ body {
   box-shadow: inset 0px 1px 4px 0px rgba(0, 0, 0, 0.2);
 }
 
-.buttons {}
+/* .buttons{
+    border: none;
+} */
 
 .operators {}
 
