--- a/style.css
+++ b/style.css
@@ -37,9 +37,9 @@ body {
   box-shadow: inset 0px 1px 4px 0px rgba(0, 0, 0, 0.2);
 }
 
-/* .buttons{
+.buttons{
     border: none;
-} */
+}
 
 .operators {}
 
